--- a/web/videos.html
+++ b/web/videos.html
@@ -48,18 +48,20 @@
         </h2>
         <br>
 
-        <a href="https://www.youtube.com/?themeRefresh=1"><img src="../img/Youtube.jpg" alt="Youtube" width="40"
+        <a href="https://www.youtube.com/?themeRefresh=1" target="_blank"><img src="../img/Youtube.jpg" alt="Youtube"
+                width="40" height="35">
+        </a>
+        <a href="https://twitter.com/home" target="_blank"><img src="../img/Twitter.png" alt="Twitter" width="35"
                 height="35">
         </a>
-        <a href="https://twitter.com/home"><img src="../img/Twitter.png" alt="Twitter" width="35" height="35">
-        </a>
-        <a href="https://www.instagram.com/"><img src="../img/Instagram.png" alt="Instagram" width="35" height="35">
-        </a>
-        <a href="https://www.facebook.com/?locale=es_ES"><img src="../img/Facebook.png" alt="facebook" width="35"
+        <a href="https://www.instagram.com/" target="_blank"><img src="../img/Instagram.png" alt="Instagram" width="35"
                 height="35">
+        </a>
+        <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><img src="../img/Facebook.png" alt="facebook"
+                width="35" height="35">
         </a>
         <br>
-        <a href="https://es.wikipedia.org/wiki/Copyright">
+        <a href="https://es.wikipedia.org/wiki/Copyright" target="_blank">
             <h3>Copyright Kiko Rivera</h3>
         </a>
 
