--- a/web/agenda.html
+++ b/web/agenda.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <img src="../img/Imatg_club_fans.jpeg" alt="Club_Fans_Kiko" width="400" height="400">
+        <img src="../img/imagenclubfans.jpeg" alt="Club_Fans_Kiko" width="400" height="400">
     </header>
 
     <nav>
@@ -19,13 +19,11 @@
         <a href="./videos.html">Vídeos</a>
         <a href="./agenda.html">Agenda</a>
         <a href="./contacte.html">Contacte</a>
-        <h2>
-            _____________________________________________________________________________________________________________________________
-        </h2>
+        <hr>
     </nav>
 
     <main>
-        <audio src="../aud/Audio-El-Mambo-Kiko-Rivera.mp3" autoplay></audio>
+        <audio src="../aud/audioelmambokiko.mp3" autoplay></audio>
         <article>
             <h1>Conciertos Kiko Rivera 2022</h1>
             <table>
@@ -60,21 +58,19 @@
     </main>
 
     <footer>
-        <h2>
-            _____________________________________________________________________________________________________________________________
-        </h2>
+        <hr>
         <br>
 
-        <a href="https://www.youtube.com/?themeRefresh=1" target="_blank"><img src="../img/Youtube.jpg" alt="Youtube"
+        <a href="https://www.youtube.com/?themeRefresh=1" target="_blank"><img src="../img/youtube.jpg" alt="Youtube"
                 width="40" height="35">
         </a>
-        <a href="https://twitter.com/home" target="_blank"><img src="../img/Twitter.png" alt="Twitter" width="35"
+        <a href="https://twitter.com/home" target="_blank"><img src="../img/twitter.png" alt="Twitter" width="35"
                 height="35">
         </a>
-        <a href="https://www.instagram.com/" target="_blank"><img src="../img/Instagram.png" alt="Instagram" width="35"
+        <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt="Instagram" width="35"
                 height="35">
         </a>
-        <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><img src="../img/Facebook.png" alt="facebook"
+        <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><img src="../img/facebook.png" alt="facebook"
                 width="35" height="35">
         </a>
         <br>
