--- a/web/fotos.html
+++ b/web/fotos.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <img src="../img/Imatg_club_fans.jpeg" alt="Club_Fans_Kiko" width="400" height="400">
+        <img src="../img/imagenclubfans.jpeg" alt="Club_Fans_Kiko" width="400" height="400">
     </header>
 
     <nav>
@@ -19,41 +19,37 @@
         <a href="./videos.html">Vídeos</a>
         <a href="./agenda.html">Agenda</a>
         <a href="./contacte.html">Contacte</a>
-        <h2>
-            _____________________________________________________________________________________________________________________________
-        </h2>
+        <hr>
     </nav>
 
     <main>
-        <audio src="../aud/Audio-El-Mambo-Kiko-Rivera.mp3" autoplay></audio>
+        <audio src="../aud/audioelmambokiko.mp3" autoplay></audio>
         <article>
             <h1>Imagenes Kiko Rivera</h1>
-            <img src="../img/Kiko_sense_camisa.jpg" alt="Festa_Kiko1" width="500" height="325">
-            <img src="../img/Kiko_DJ.jpg" alt="Kiko_DJ" width="500" height="325">
-            <img src="../img/Kiko_Playa.jpg" alt="Kiko_playa" width="200" height="325">
-            <img src="../img/Kiko_Gafas.jpg" alt="Kiko_Gafas" width="600" height="375">
-            <img src="../img/Kiko_Seductor.jpg" alt="Kiko_Seductor" width="700" height="400">
-            <img src="../img/Kiko-Rivera-Twitch.jpg" alt="Kiko_Stream" width="1500" height="900">
+            <img src="../img/kikosincamiseta.jpg" alt="Festa_Kiko1" width="500" height="325">
+            <img src="../img/kikodj.jpg" alt="Kiko_DJ" width="500" height="325">
+            <img src="../img/kikoplaya.jpg" alt="Kiko_playa" width="200" height="325">
+            <img src="../img/kikogafas.jpg" alt="Kiko_Gafas" width="600" height="375">
+            <img src="../img/kikoseductor.jpg" alt="Kiko_Seductor" width="700" height="400">
+            <img src="../img/kikotwitch.jpg" alt="Kiko_Stream" width="1500" height="900">
 
         </article>
     </main>
 
     <footer>
-        <h2>
-            _____________________________________________________________________________________________________________________________
-        </h2>
+        <hr>
         <br>
 
-        <a href="https://www.youtube.com/?themeRefresh=1" target="_blank"><img src="../img/Youtube.jpg" alt="Youtube"
+        <a href="https://www.youtube.com/?themeRefresh=1" target="_blank"><img src="../img/youtube.jpg" alt="Youtube"
                 width="40" height="35">
         </a>
-        <a href="https://twitter.com/home" target="_blank"><img src="../img/Twitter.png" alt="Twitter" width="35"
+        <a href="https://twitter.com/home" target="_blank"><img src="../img/twitter.png" alt="Twitter" width="35"
                 height="35">
         </a>
-        <a href="https://www.instagram.com/" target="_blank"><img src="../img/Instagram.png" alt="Instagram" width="35"
+        <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt="Instagram" width="35"
                 height="35">
         </a>
-        <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><img src="../img/Facebook.png" alt="facebook"
+        <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><img src="../img/facebook.png" alt="facebook"
                 width="35" height="35">
         </a>
         <br>
