--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <img src="./img/Imatg_club_fans.jpeg" alt="Club_Fans_Kiko" width="400" height="400">
+        <img src="./img/imagenclubfans.jpeg" alt="Club_Fans_Kiko" width="400" height="400">
     </header>
 
     <nav>
@@ -20,17 +20,15 @@
         <a href="./web/videos.html">Vídeos</a>
         <a href="./web/agenda.html">Agenda</a>
         <a href="./web/contacte.html">Contacte</a>
-        <h2>
-            _____________________________________________________________________________________________________________________________
-        </h2>
+        <hr>
     </nav>
     <main>
-        <audio src="../aud/Audio-El-Mambo-Kiko-Rivera.mp3" autoplay></audio>
+        <audio src="./aud/audioelmambokiko.mp3" autoplay></audio>
         <article>
             <h1>Kiko Rivera no quiere saber nada de su madre</h1>
             <h3>SAÚL ORTIZ / NOTICIA / 10.10.2023 - 07:16</h3>
             <br>
-            <img src="./img/Artista_Kiko.jpeg" alt="Artista_Kiko" width="400" height="300">
+            <img src="./img/artistakiko.jpeg" alt="Artista_Kiko" width="400" height="300">
         </article>
 
         <aside>
@@ -54,21 +52,19 @@
     </main>
 
     <footer>
-        <h2>
-            _____________________________________________________________________________________________________________________________
-        </h2>
+        <hr>
         <br>
 
-        <a href="https://www.youtube.com/?themeRefresh=1" target="_blank"><img src="./img/Youtube.jpg" alt="Youtube"
+        <a href="https://www.youtube.com/?themeRefresh=1" target="_blank"><img src="./img/youtube.jpg" alt="Youtube"
                 width="40" height="35">
         </a>
-        <a href="https://twitter.com/home" target="_blank"><img src="./img/Twitter.png" alt="Twitter" width="35"
+        <a href="https://twitter.com/home" target="_blank"><img src="./img/twitter.png" alt="Twitter" width="35"
                 height="35">
         </a>
-        <a href="https://www.instagram.com/" target="_blank"><img src="./img/Instagram.png" alt="Instagram" width="35"
+        <a href="https://www.instagram.com/" target="_blank"><img src="./img/instagram.png" alt="Instagram" width="35"
                 height="35">
         </a>
-        <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><img src="./img/Facebook.png" alt="facebook"
+        <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><img src="./img/facebook.png" alt="facebook"
                 width="35" height="35">
         </a>
         <br>
