--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
     <meta charset="utf-8">
     <title>Index</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./css/common.css">
 </head>
 
 <body>
 
     <header>
-        <img src="./img/imagenclubfans.jpeg" alt="Club_Fans_Kiko" width="400" height="400">
+    <img id="imgCap" src="./img/imagenclubfans.jpeg" alt="Club_Fans_Kiko" width="400" height="400">
     </header>
 
     <nav>
-        <a href="./index.html">Inici</a>
-        <a href="./web/general.html">General</a>
-        <a href="./web/fotos.html">Fotos</a>
-        <a href="./web/videos.html">Vídeos</a>
-        <a href="./web/agenda.html">Agenda</a>
-        <a href="./web/contacte.html">Contacte</a>
+        <ul>
+            <li><a href="./index.html">Inici</a></li>
+            <li><a href="./web/general.html">General</a></li>
+            <li><a href="./web/fotos.html">Fotos</a></li>
+            <li><a href="./web/videos.html">Vídeos</a></li>
+            <li><a href="./web/agenda.html">Agenda</a></li>
+            <li><a href="./web/contacte.html">Contacte</a></li>
+        </ul>
         <hr>
     </nav>
     <main>
