--- a/web/fotos.html
+++ b/web/fotos.html
@@ -14,7 +14,7 @@
 
     <nav>
         <a href="../index.html">Inici</a>
-        <a href="./general.html">General</a>
+        <a href="./agenda.html">General</a>
         <a href="./fotos.html">Fotos</a>
         <a href="./videos.html">Vídeos</a>
         <a href="./agenda.html">Agenda</a>
