--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
 
     <header>
-    <img id="imgCap" src="./img/imagenclubfans.jpeg" alt="Club_Fans_Kiko" width="400" height="400">
+        <h1>KIKO RIVERA</h1>
+        <h2>CLUB DE FANS</h2>
     </header>
 
     <nav>
@@ -23,10 +24,8 @@
             <li><a href="./web/agenda.html">Agenda</a></li>
             <li><a href="./web/contacte.html">Contacte</a></li>
         </ul>
-        <hr>
     </nav>
     <main>
-        <audio src="./aud/audioelmambokiko.mp3" autoplay></audio>
         <article>
             <h1>Kiko Rivera no quiere saber nada de su madre</h1>
             <h3>SAÚL ORTIZ / NOTICIA / 10.10.2023 - 07:16</h3>
