--- a/web/videos.html
+++ b/web/videos.html
@@ -5,21 +5,25 @@
     <meta charset="utf-8">
     <title>General</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="../css/common.css">
+
 </head>
 
 <body>
     <header>
-        <img src="../img/imagenclubfans.jpeg" alt="Club_Fans_Kiko" width="400" height="400">
+        <h1>KIKO RIVERA</h1>
+        <h2>CLUB DE FANS</h2>
     </header>
 
     <nav>
-        <a href="../index.html">Inici</a>
-        <a href="./general.html">General</a>
-        <a href="./fotos.html">Fotos</a>
-        <a href="./videos.html">Vídeos</a>
-        <a href="./agenda.html">Agenda</a>
-        <a href="./contacte.html">Contacte</a>
-        <hr>
+        <ul>
+            <li><a href="../index.html">Inici</a></li>
+            <li><a href="../web/general.html">General</a></li>
+            <li><a href="../web/fotos.html">Fotos</a></li>
+            <li><a href="../web/videos.html">Vídeos</a></li>
+            <li><a href="../web/agenda.html">Agenda</a></li>
+            <li><a href="../web/contacte.html">Contacte</a></li>
+        </ul>
     </nav>
 
     <main>
