--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Index</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
@@ -34,7 +35,7 @@
         </article>
 
         <aside>
-            <h2>Su último tema, 'El mambo', está siendo un éxito en Spotify.</h2>
+            <h2>Su último tema, 'El mambo', está siendo un éxito en Spotify</h2>
             <p>
                 Está de celebración, muy feliz y entusiasmado porque El mambo, su
                 última canción, se ha convertido en uno de los hits más escuchados
@@ -54,10 +55,7 @@
     </main>
 
     <footer>
-        <hr>
-        <br>
-
-        <a href="https://www.youtube.com/?themeRefresh=1" target="_blank"><img src="./img/youtube.jpg" alt="Youtube"
+        <a href="https://www.youtube.com/?themeRefresh=1" target="_blank"><img src="./img/youtube.png" alt="Youtube"
                 width="40" height="35">
         </a>
         <a href="https://twitter.com/home" target="_blank"><img src="./img/twitter.png" alt="Twitter" width="35"
@@ -70,10 +68,9 @@
                 width="35" height="35">
         </a>
         <br>
-        <a href="https://es.wikipedia.org/wiki/Copyright" target="_blank">
+        <a id="copy" href="https://es.wikipedia.org/wiki/Copyright" target="_blank">
             <h3>Copyright Kiko Rivera</h3>
         </a>
-
     </footer>
 
 </body>
