--- a/web/contacte.html
+++ b/web/contacte.html
@@ -74,10 +74,8 @@
     </main>
 
     <footer>
-        <hr>
-        <br>
 
-        <a href="https://www.youtube.com/?themeRefresh=1" target="_blank"><img src="../img/youtube.jpg" alt="Youtube"
+        <a href="https://www.youtube.com/?themeRefresh=1" target="_blank"><img src="../img/youtube.png" alt="Youtube"
                 width="40" height="35">
         </a>
         <a href="https://twitter.com/home" target="_blank"><img src="../img/twitter.png" alt="Twitter" width="35"
@@ -90,7 +88,7 @@
                 width="35" height="35">
         </a>
         <br>
-        <a href="https://es.wikipedia.org/wiki/Copyright" target="_blank">
+        <a id="copy" href="https://es.wikipedia.org/wiki/Copyright" target="_blank">
             <h3>Copyright Kiko Rivera</h3>
         </a>
 
