--- a/index.html
+++ b/index.html
@@ -31,19 +31,22 @@
             <h1>Kiko Rivera no quiere saber nada de su madre</h1>
             <h3>SAÚL ORTIZ / NOTICIA / 10.10.2023 - 07:16</h3>
             <br>
-            <img src="./img/artistakiko.jpeg" alt="Artista_Kiko" width="400" height="300">
+            <div class="contenedor">      
+                <img src="./img/artistakiko.jpeg" alt="Artista_Kiko" width="600" height="450">
+            </div>
         </article>
 
         <aside>
             <h2>Su último tema, 'El mambo', está siendo un éxito en Spotify</h2>
+            <br>
             <p>
                 Está de celebración, muy feliz y entusiasmado porque El mambo, su
                 última canción, se ha convertido en uno de los hits más escuchados
-                de la música española.<br>
+                de la música española.
                 Kiko Rivera sigue en estado de shock después de que Spotify le haya
                 comunicado que es el número uno de la lista de éxitos cañís y que
                 más de tres millones de melómanos han guardado el tema como uno de
-                los favoritos.<br>
+                los favoritos.
                 En este ambiente festivalero no caben los conflictos ni las
                 temeridades. Por eso no quiere que nadie le hable de personas de las
                 que, a día de hoy, no quiere saber absolutamente nada. Ni su hermana
