--- a/web/agenda.html
+++ b/web/agenda.html
@@ -6,6 +6,7 @@
     <title>General</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/agenda.css">
 
 </head>
 
@@ -39,17 +40,17 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>Día: 22 <br> Sala Copernico, (Madrid) <br> Calle Fernandez de los rios 67 </td>
-                        <td>Día: 8 <br> Plaza de Toros de Cehegin, C. Gran Vía, 3 <br> 30430, Murcia, Murcia </td>
-                        <td>Día: 19 <br> Sala INK Narón, Est. de Castela, 278 <br> 15570, Narón, La Coruña </td>
+                    <tr >
+                        <td id="blau">Día: 22 <br> Sala Copernico, (Madrid) <br> Calle Fernandez de los rios 67 </td>
+                        <td id="verd">Día: 8 <br> Plaza de Toros de Cehegin, C. Gran Vía, 3 <br> 30430, Murcia, Murcia </td>
+                        <td id="blau">Día: 19 <br> Sala INK Narón, Est. de Castela, 278 <br> 15570, Narón, La Coruña </td>
                     </tr>
                     <tr>
-                        <td>Día: 2 <br> CEIP Miguel de Cervantes, San Miguel, <br> 81 18100, Armilla, Granada</td>
-                        <td>Día: 24 <br> Gran Canaria Arena, c/ Fondos de Segura, s/n <br> 35019, Las Palmas de Gran
+                        <td id="verd">Día: 2 <br> CEIP Miguel de Cervantes, San Miguel, <br> 81 18100, Armilla, Granada</td>
+                        <td id="blau">Día: 24 <br> Gran Canaria Arena, c/ Fondos de Segura, s/n <br> 35019, Las Palmas de Gran
                             Canaria, Las
                             Palmas</td>
-                        <td>Día: 17 <br> Sala Fulanita de Tal, C. de Regueros, 9 <br> 28004, Madrid, Madrid</td>
+                        <td id="verd">Día: 17 <br> Sala Fulanita de Tal, C. de Regueros, 9 <br> 28004, Madrid, Madrid</td>
                     </tr>
                 </tbody>
             </table>
