--- a/web/fotos.html
+++ b/web/fotos.html
@@ -6,6 +6,7 @@
     <title>General</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/fotos.css">
 
 </head>
 
@@ -29,12 +30,12 @@
     <main>
         <article>
             <h1>Imagenes Kiko Rivera</h1>
-            <img src="../img/kikosincamiseta.jpg" alt="Festa_Kiko1" width="500" height="325">
-            <img src="../img/kikodj.jpg" alt="Kiko_DJ" width="500" height="325">
-            <img src="../img/kikoplaya.jpg" alt="Kiko_playa" width="200" height="325">
-            <img src="../img/kikogafas.jpg" alt="Kiko_Gafas" width="600" height="375">
-            <img src="../img/kikoseductor.jpg" alt="Kiko_Seductor" width="700" height="400">
-            <img src="../img/kikotwitch.jpg" alt="Kiko_Stream" width="1500" height="900">
+            <img class="fila1" src="../img/kikosincamiseta.jpg" alt="Festa_Kiko1" width="500" height="325">
+            <img class="fila1" src="../img/kikoplaya.jpg" alt="Kiko_playa" width="225" height="325">
+            <img class="fila1" src="../img/kikodj.jpg" alt="Kiko_DJ" width="500" height="325">
+            <img class="fila2" src="../img/kikogafas.jpg" alt="Kiko_Gafas" width="600" height="400">
+            <img class="fila2" src="../img/kikoseductor.jpg" alt="Kiko_Seductor" width="600" height="400">
+            <img id="imatgegran" src="../img/kikotwitch.jpg" alt="Kiko_Stream" width="1250" height="800">
 
         </article>
     </main>
