--- a/web/general.html
+++ b/web/general.html
@@ -6,7 +6,7 @@
     <title>General</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/common.css">
-
+    <link rel="stylesheet" href="../css/general.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
 
     <main>
         <article>
-            <h1>Introducción</h1>
+            <h1 id="titol">Introducción</h1>
         </article>
 
         <aside>
@@ -49,11 +49,12 @@
                 El 26 de septiembre de 1984, y cuando Kiko contaba solo 7 meses de edad, Paquirri falleció durante el
                 traslado desde la plaza de toros de Pozoblanco (Córdoba), donde había recibido una cornada mortal por
                 parte del toro Avispado durante una corrida.Este hecho marcaría para siempre la imagen de Kiko
-                Rivera, conocido desde niño por Paquirrín. Su imagen y la de su madre pasarían a ser portada de las
+                Rivera, conocido desde niño por Paquirrín. <br>
+                Su imagen y la de su madre pasarían a ser portada de las
                 revistas del corazón del país (antes de cumplir un año fue portada de la revista ¡Hola!)sobre todo a
                 raíz de la aparición del pequeño en el escenario en uno de los conciertos de Isabel Pantoja cantando
                 unas estrofas junto a su madre. Este tipo de situaciones llevaron posteriormente a la cantante a
-                denunciar públicamente el acoso mediático al que fue sometido desde niño.
+                denunciar públicamente el acoso mediático al que fue sometido desde niño.<br>
 
                 Su afición al fútbol le llevó a realizar una prueba para intentar acceder a las secciones inferiores del
                 Real Madrid, ayudado por la amistad con su familia de Ramón Calderón, pero no consiguió su
