--- a/web/videos.html
+++ b/web/videos.html
@@ -6,6 +6,7 @@
     <title>General</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/videos.css">
 
 </head>
 
@@ -29,18 +30,18 @@
     <main>
         <article>
             <h1>Videos Kiko Rivera</h1>
-            <iframe width="560" height="315" src="../vid/elmambokiko.mp4" title="El mambo cancion"
+            <iframe id="video1" width="660" height="415" src="../vid/elmambokiko.mp4" title="El mambo cancion"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
 
-            <iframe width="560" height="315" src="../vid/kikomartes.mp4" title="Martes Cancion"
+            <iframe id="video2" width="660" height="415" src="../vid/kikomartes.mp4" title="Martes Cancion"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
-
-            <iframe width="560" height="315" src="../vid/kikoprunbesito.mp4" title="Por un Besito Cancion"
+            <div class="contenidor">
+                <iframe id="video3" width="660" height="415" src="../vid/kikoprunbesito.mp4" title="Por un Besito Cancion"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
-
+            </div>
         </article>
     </main>
 
