--- a/web/agenda.html
+++ b/web/agenda.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>General</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Agenda página kiko">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/agenda.css">
 
@@ -29,7 +30,7 @@
 
     <main>
         <article>
-            <h1>Conciertos Kiko Rivera 2022</h1>
+            <h2>Conciertos Kiko Rivera 2022</h2>
             <table>
                 <caption>Conciertos T1 Kiko Rivera </caption>
                 <thead>
@@ -41,16 +42,14 @@
                 </thead>
                 <tbody>
                     <tr >
-                        <td id="blau">Día: 22 <br> Sala Copernico, (Madrid) <br> Calle Fernandez de los rios 67 </td>
-                        <td id="verd">Día: 8 <br> Plaza de Toros de Cehegin, C. Gran Vía, 3 <br> 30430, Murcia, Murcia </td>
-                        <td id="blau">Día: 19 <br> Sala INK Narón, Est. de Castela, 278 <br> 15570, Narón, La Coruña </td>
+                        <td class="blau">Día: 22 <br> Sala Copernico, (Madrid) <br> Calle Fernandez de los rios 67 </td>
+                        <td class="verd">Día: 8 <br> Plaza de Toros de Cehegin, C. Gran Vía, 3 <br> 30430, Murcia, Murcia </td>
+                        <td class="blau">Día: 19 <br> Sala INK Narón, Est. de Castela, 278 <br> 15570, Narón, La Coruña </td>
                     </tr>
                     <tr>
-                        <td id="verd">Día: 2 <br> CEIP Miguel de Cervantes, San Miguel, <br> 81 18100, Armilla, Granada</td>
-                        <td id="blau">Día: 24 <br> Gran Canaria Arena, c/ Fondos de Segura, s/n <br> 35019, Las Palmas de Gran
-                            Canaria, Las
-                            Palmas</td>
-                        <td id="verd">Día: 17 <br> Sala Fulanita de Tal, C. de Regueros, 9 <br> 28004, Madrid, Madrid</td>
+                        <td class="verd">Día: 2 <br> CEIP Miguel de Cervantes, San Miguel, <br> 81 18100, Armilla, Granada</td>
+                        <td class="blau">Día: 24 <br> Gran Canaria Arena, c/ Fondos de Segura, s/n <br> 35019, Las Palmas de Gran Canaria, Las Palmas</td>
+                        <td class="verd">Día: 17 <br> Sala Fulanita de Tal, C. de Regueros, 9 <br> 28004, Madrid, Madrid</td>
                     </tr>
                 </tbody>
             </table>
