--- a/web/contacte.html
+++ b/web/contacte.html
@@ -5,7 +5,10 @@
     <meta charset="utf-8">
     <title>General</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Contacte página kiko">
     <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/contacte.css">
+
 
 </head>
 
@@ -28,7 +31,7 @@
 
     <main>
         <article>
-            <h1>Contacte amb nosaltres</h1>
+            <h2>Contacte amb nosaltres</h2>
             <ul>
                 <li>
                     <label for="name">Nombre:</label>
@@ -51,7 +54,7 @@
 
             <br>
 
-            <h1>Els nostres punts de contacte</h1>
+            <h2>Els nostres punts de contacte</h2>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.8117727664417!2d-3.7162190244062505!3d40.43516665451774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422842d75ec913%3A0x2ec95d046e76f92!2sC.%20de%20Fern%C3%A1ndez%20de%20los%20R%C3%ADos%2C%2067%2C%2028015%20Madrid!5e0!3m2!1ses!2ses!4v1696951561367!5m2!1ses!2ses"
                 width="800" height="550" style="border:0;" allowfullscreen="" loading="lazy"
