--- a/web/general.html
+++ b/web/general.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>General</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="General página kiko">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/general.css">
 </head>
@@ -28,7 +29,7 @@
 
     <main>
         <article>
-            <h1 id="titol">Introducción</h1>
+            <h2 id="titol">Introducción</h2>
         </article>
 
         <aside>
@@ -41,7 +42,7 @@
                 éxitos musicales.
             </p>
             <br>
-            <h1>Biografía</h1>
+            <h2>Biografía</h2>
             <p>Fue el único hijo de la pareja compuesta por el torero Francisco Rivera y la actriz y cantante Isabel
                 Pantoja, que se casaron en 1983. Francisco Rivera tenía dos hijos de su anterior matrimonio con Carmen
                 Ordóñez: los a posteriori toreros Francisco y Cayetano Rivera Ordóñez.
