--- a/web/videos.html
+++ b/web/videos.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>General</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Videos página kiko">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/videos.css">
 
@@ -29,7 +30,7 @@
 
     <main>
         <article>
-            <h1>Videos Kiko Rivera</h1>
+            <h2>Videos Kiko Rivera</h2>
             <iframe id="video1" width="660" height="415" src="../vid/elmambokiko.mp4" title="El mambo cancion"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
