--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Index</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Index página kiko">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/index.css">
 </head>
@@ -28,7 +29,7 @@
     </nav>
     <main>
         <article>
-            <h1>Kiko Rivera no quiere saber nada de su madre</h1>
+            <h2>Kiko Rivera no quiere saber nada de su madre</h2>
             <h3>SAÚL ORTIZ / NOTICIA / 10.10.2023 - 07:16</h3>
             <br>
             <div class="contenedor">      
