--- a/web/fotos.html
+++ b/web/fotos.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>General</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Fotos página kiko">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/fotos.css">
 
@@ -29,7 +30,7 @@
 
     <main>
         <article>
-            <h1>Imagenes Kiko Rivera</h1>
+            <h2>Imagenes Kiko Rivera</h2>
             <img class="fila1" src="../img/kikosincamiseta.jpg" alt="Festa_Kiko1" width="500" height="325">
             <img class="fila1" src="../img/kikoplaya.jpg" alt="Kiko_playa" width="225" height="325">
             <img class="fila1" src="../img/kikodj.jpg" alt="Kiko_DJ" width="500" height="325">
