--- a/web/contacte.html
+++ b/web/contacte.html
@@ -81,7 +81,7 @@
         <a href="https://www.youtube.com/?themeRefresh=1" target="_blank"><img src="../img/youtube.png" alt="Youtube"
                 width="40" height="35">
         </a>
-        <a href="https://twitter.com/home" target="_blank"><img src="..\img\twitter.png" alt="Twitter" width="35"
+        <a href="https://twitter.com/home" target="_blank"><img src="../img/twitter.png" alt="Twitter" width="35"
                 height="35">
         </a>
         <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt="Instagram" width="35"
